--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Exam is coming. pray for me</h1>
-    
+    <h3>Insha allah i will rock in the exam</h3>
+
     
 </body>
 </html>
